[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gz-dap-proxy"
version = "0.1.0"
description = "DAP proxy that pauses/unpauses Gazebo Sim on debug breakpoints"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Riccardo" }]
keywords = ["dap", "gazebo", "ros2", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]

[project.scripts]
gz-dap-proxy = "gz_dap_proxy.proxy:main"
